--- a/apps/docs/src/content/docs/guides/creating-policies.mdx
+++ b/apps/docs/src/content/docs/guides/creating-policies.mdx
@@ -1,5 +1,7 @@
 ---
 title: Creating policies
+sidebar:
+  order: 2
 ---
 
 Policies are created in two steps by first creating a **subject guard** which is used to define the concrete **policy**.
