--- a/apps/docs/src/content/docs/plugins/react-server-components.mdx
+++ b/apps/docs/src/content/docs/plugins/react-server-components.mdx
@@ -2,8 +2,81 @@
 title: React Server Components (RSC) Plugin
 sidebar:
   label: React RSC Plugin 
-  badge:
-    text: Pending
 ---
 
-No content.
+import { Tabs, TabItem } from "@astrojs/starlight/components";
+import { LinkCard } from '@astrojs/starlight/components';
+
+## Installation
+
+Install the plugin with your package manager of choice.
+
+<Tabs syncKey="package-manager">
+  <TabItem label="npm">
+    ```bash
+    npm install @kilpi/react-server
+    ```
+  </TabItem>
+
+  <TabItem label="yarn">
+    ```bash
+    yarn add @kilpi/react-server
+    ```
+  </TabItem>
+
+  <TabItem label="pnpm">
+    ```bash
+    pnpm add @kilpi/react-server
+    ```
+  </TabItem>
+
+  
+  <TabItem label="bun">
+    ```bash
+    bun add @kilpi/react-server
+    ```
+  </TabItem>
+</Tabs>
+
+Apply the plugin in your Kilpi configuration as follows.
+
+```diff lang="ts"
+// kilpi.ts
+export const Kilpi = createKilpi({
+  getSubject,
+  policies,
++ plugins: [ReactServerComponentPlugin()]
+})
+```
+
+## Features
+
+### Scope
+
+The plugin automatically provides a scope for React Server Components.
+
+```tsx {2,3}
+export default async function ProtectedPage() {
+  Kilpi.onUnauthorized(() => redirect("/")); // Just works
+  Kilpi.authorize("any:policy");
+  return <div>...</div>
+}
+```
+
+### Components
+
+The package also provides the `createKilpiReactServerComponents` function to create React server component bindings for working with Kilpi.
+
+You may optionally provide default `Unauthorized` and `Loading` fallback components as the second argument.
+
+```ts
+export const { Access } = createKilpiReactServerComponents(Kilpi);
+```
+
+### Read more
+
+<LinkCard
+  title="Read more"
+  description="Learn more about React Server Components in the RSC installation guide."
+  href="/installation/react-server-components"
+/>
