docs: improve docs

--- a/apps/docs/src/content/docs/installation/next.mdx
+++ b/apps/docs/src/content/docs/installation/next.mdx
@@ -8,9 +8,9 @@ import { Steps } from "@astrojs/starlight/components";
 
 Ensure you have setup Kilpi using the [quickstart guide](/getting-started/quickstart) before proceeding.
 
-### React Server Components plugin
+### React Server Components Plugin
 
-Follow the [React Server Components installation guide](/installation/react-server-components) to install the React Server Components plugin and create server components bindings for Kilpi.
+Install the [React Server Components Plugin](/installation/react-server-components) first to start using Kilpi in your Next.js application.
 
 ### Provide a scope for server actions and endpoints
 
