--- a/apps/docs/src/content/docs/installation/oak.mdx
+++ b/apps/docs/src/content/docs/installation/oak.mdx
@@ -3,6 +3,8 @@ title: Oak
 description: Install Kilpi for Oak
 ---
 
+Ensure you have setup Kilpi using the [quickstart guide](/getting-started/quickstart) before proceeding.
+
 Installing Kilpi for Oak is as easy as providing Kilpi scope within a middleware. You do not need any plugins. We also recommend to set an `onUnauthorized` handler to throw an HTTPException with a 403 status code.
 
 ```ts
