--- a/apps/docs/src/content/docs/installation/express.mdx
+++ b/apps/docs/src/content/docs/installation/express.mdx
@@ -3,6 +3,8 @@ title: Express
 description: Install Kilpi for Express
 ---
 
+Ensure you have setup Kilpi using the [quickstart guide](/getting-started/quickstart) before proceeding.
+
 Installing Kilpi for Express is as easy as providing Kilpi scope within a middleware. You do not need any plugins.
 
 ```ts
