--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -4,7 +4,7 @@ template: splash
 hero:
   title: ""
 banner:
-  content: ⚡ Current API is not yet stable. Use with caution. ⚡
+  content: ⚡ Current API is unstable. Use with caution. ⚡
 prev: false
 next: false
 ---
