docs: rename advanced guide filenames

--- a/apps/docs/src/content/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/content/docs/getting-started/introduction.mdx
@@ -50,7 +50,7 @@ Kilpi is an opinionated library designed based on certain principles. Read throu
 
 - **Authorization model agnostic**
 
-  Kilpi does **not** implement any advanced authorization concepts (roles, permissions, organizations, memberships, ...). Nor does it enforce any single implementation. Instead, Kilpi is designed to be flexible enough to facilitate any authorization model. We do however offer best practices on implementing [custom permissions](/advanced/implement-permissions), [ABAC](/advanced/implement-abac), [RBAC](/advanced/implement-rbac) and [ReBAC](/advanced/implement-rebac) using Kilpi.
+  Kilpi does **not** implement any advanced authorization concepts (roles, permissions, organizations, memberships, ...). Nor does it enforce any single implementation. Instead, Kilpi is designed to be flexible enough to facilitate any authorization model. We do however offer best practices on implementing [custom permissions](/advanced/permissions), [ABAC](/advanced/abac), [RBAC](/advanced/rbac) and [ReBAC](/advanced/rebac) using Kilpi.
 
 ---
 
