fix: access component export

--- a/apps/docs/src/content/docs/getting-started/quickstart.mdx
+++ b/apps/docs/src/content/docs/getting-started/quickstart.mdx
@@ -153,5 +153,5 @@ Get started quickly with Kilpi using this guide.
 
 ## Next steps
 
-- Add any plugins you might need.
--	Read up on [Kilpi concepts and guides](/concepts/authorization)
+- Follow the installation guide for your framework of choice.
+-	Read up on [Kilpi concepts and guides](/concepts/authorization).
