--- a/apps/docs/src/content/docs/concepts/plugin.mdx
+++ b/apps/docs/src/content/docs/concepts/plugin.mdx
@@ -35,5 +35,5 @@ await Kilpi.logRecorder.flushLogs();
 <LinkCard 
   title="Create a custom plugin" 
   description="Learn how to create a custom plugin for your own use case or to publish as a library."
-  href="/advanced/create-plugin"
+  href="/advanced/creating-plugins"
 />
