--- a/apps/docs/src/content/docs/advanced/rebac.mdx
+++ b/apps/docs/src/content/docs/advanced/rebac.mdx
@@ -3,8 +3,131 @@ title: ReBAC
 description: Relationship-based access control
 sidebar:
   order: 1
-  badge:
-    text: Pending
 ---
 
-Not yet written.
+:::note
+With Kilpi, you don't have to decide between [RBAC](/advanced/rbac), [ABAC](/advanced/abac), [ReBAC](/advanced/rebac) or other access control models. Kilpi allows fluidly mixing them together based on your needs with a single declarative API. Besides, RBAC](/advanced/rbac), [ABAC](/advanced/abac) and [ReBAC](/advanced/rebac) are not completely separate models (e.g. [RBAC](/advanced/rbac) is a subset of [ABAC](/advanced/abac)).
+
+This guide is a tutorial on how to implement authorization policies that would fall under the term of ReBAC.
+:::
+
+*ReBAC* or *Relationship-based access control* is a model where authorizations to resources are based on relationships between different resources, such as **data ownership**, **parent-child relationships**, **groups**, and **hierarchies**.
+
+Let's explore different ReBAC scenarios and how they can be implemented using **Kilpi**.
+
+### Data ownership
+
+> "The user should be able to delete their own comment".
+
+This is trivial to implement with Kilpi as follows.
+
+```ts
+export const policies = {
+  comments: {
+    delete: AuthedPolicy((user, comment: Comment) => {
+      return user.id === comment.userId;
+    })
+  }
+}
+```
+
+### Parent-child relationships
+
+> "The user should be able to delete a folder if they are the owner of the folder or any parent folder".
+
+Implementing parent-child relationships in your authorization model is less a problem of how to implement it in Kilpi, and more a problem of data-modeling and designing efficient queries.
+
+Let's imagine the following data model:
+
+```sql
+CREATE TABLE folders
+(
+    id SERIAL PRIMARY KEY,
+    name TEXT,
+    parent_id INT,
+    owner_id INT
+);
+```
+
+One way of approaching this problem is with a recursively fetching authorization policy.
+
+```ts
+async function isOwnerOfFolderOrParent(folderId: string): Promise<boolean> {
+  // Fetch folder
+  const folder = await db.getFolderById(folderId);
+
+  // Is owner: Stop recursion
+  if (folder?.ownerId === user.id) return true; 
+
+  // Recursively check parent folders until root
+  if (folder?.parentId) return isOwnerOfFolderOrParent(folder.parentId);
+  
+  // Base case
+  return false
+}
+
+export const policies = {
+  folders: {
+    delete: AuthedPolicy(async (user, folderId: string) => {
+      return await isOwnerOfFolderOrParent(folderId);
+    }),
+  }
+}
+```
+
+### Groups (e.g. Organizations)
+
+> "The user should be able to create a document in an organization if they are a member of the organization".
+
+Instead of using an asynchronous data-fetching policy as we did for parent-child relationships, let's explore **integrating memberships into the subject**.
+
+This is a great alternative if most of your authorization policies are based on memberships, which is common in many SaaS applications.
+
+```ts
+type Subject = User & { 
+  memberships: Array<{
+    organizationId: string;
+    role: string;
+  }>
+};
+
+export async function getSubject() {
+  const user = await getCurrentUser();
+  const memberships = await listMembershipsForUser(user.id);
+  return Object.assign(user, { memberships })
+}
+
+// Tip: Use utility functions (You can extend this function with e.g. role checks in the future)
+export function isMember(user: Subject, orgId: string) {
+  return user.memberships.some(m => m.organizationId === orgId);
+}
+
+
+export const policies = {
+  documents: {
+    create: AuthedPolicy((user: Subject, organizationId: string) => {
+      return isMember(user, organizationId);
+    }),
+  }
+}
+```
+
+### Permissions
+
+See the article on [implementing permissions using Kilpi](/advanced/permissions) for a more detailed guide on implementing a dynamic permissions-based system.
+
+### Generalized ReBAC solution
+
+In general, any ReBAC problem can be solved by designing a **data model** and **queries** for fetching the necessary relationships. Here are some common strategies for querying your data model.
+
+1. **Pass as resource**
+
+    When the relationship is between the resource and the subject, it is best to pass the resource as an argument to the policy function directly. See the [Data ownership](#data-ownership) example.
+
+2. **Fetch in policy**
+
+    For data that can not be considered the resource of the policy, and is not global enough to be included in the subject, you can fetch in an asynchronous policy. See the [Parent-child relationships example](#parent-child-relationships).
+
+3. **Pass in subject**
+
+    For data that can be considered global enough to be always fetched, you can include it in the subject. See the [Groups (e.g. Organizations)](#groups-eg-organizations) example.
