feat: add buy-me-a-coffee

--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -16,10 +16,12 @@ import { BottomGetStartedSection } from "@/components/BottomGetStartedSection";
 import { FeaturesSection } from "@/components/FeaturesSection";
 import { HeroSection } from "@/components/HeroSection";
 import { PluginsSection } from "@/components/PluginsSection";
+import { SupportSection } from "@/components/SupportSection";
 
 <main class="not-content text-foreground max-w-screen overflow-hidden">
 	<HeroSection />
-	<FeaturesSection />
+  <SupportSection />
+  <FeaturesSection />
 	<PluginsSection />
 	<BottomGetStartedSection />
 </main>
