docs: extend support page

--- a/apps/docs/src/content/docs/getting-started/support.mdx
+++ b/apps/docs/src/content/docs/getting-started/support.mdx
@@ -4,6 +4,18 @@ title: Support development
 
 Kilpi is free to use and will always remain so.
 
+## Suppporting development
+
 However, Kilpi is currently being developed by a single person as a side-project. This is not sustainable. You can help keep the coffee flowing to receive active maintenance and new features by supporting me for the small price of a coffee.
 
-<a href="https://www.buymeacoffee.com/nevavuoriji" target="_blank" style="margin-top:32px;display:inline-block;"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></img></a>
+<a href="https://www.buymeacoffee.com/nevavuoriji" target="_blank" style="margin-block:32px;display:inline-block;"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></img></a>
+
+This is the fastest way to get new features: Improved plugins API, client-side authorization, audit plugin, improved documentation and so much more.
+
+## Contributing
+
+Kilpi is open-source. This means you are free to contribute. [Clone the repository and create your first pull request on Github](https://github.com/Jussinevavuori/kilpi).
+
+:::note
+Instructions on contributing to Kilpi are coming soon. For now, you can clone the repository and start creating pull requests.
+:::
